Suppression du panneau stats.

--- a/touch/VRSpaceTrader/index.html
+++ b/touch/VRSpaceTrader/index.html
@@ -26,7 +26,7 @@
     <script src="components/changement-outil.js"></script>
   </head>
   <body>
-    <a-scene stats physics="gravity:0"
+    <a-scene physics="gravity:0"
              environment="grid: none;
                           active: true;
                           fog: 0;preset:yavapai;
