Modification d'une erreur de l'attribute laser-controls.

--- a/point/railOfTime/index.html
+++ b/point/railOfTime/index.html
@@ -306,7 +306,7 @@
           </a-entity>
         </a-entity>
         <a-entity id="rhand" raycaster="objects:.sphereGraphe,.panneauSelectionPays;far:20;recursive:false;"
-        laser-controls="hands:right" motion-capture-recorder="hand: right;  persistStroke:true;recordingControls: true;visibleStroke:true;"
+        laser-controls="hand:right" motion-capture-recorder="hand: right;  persistStroke:true;recordingControls: true;visibleStroke:true;"
         line="color: #22D1EE; opacity: 0.75"></a-entity><!-- teleport-controls="type:parabolic;" changement-outil ligne-du-temps="event:click;mixin:ligneTemps"-->
       </a-entity>
 
